--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,6 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="app.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
@@ -28,28 +27,27 @@
         </button>
         <a class="navbar-brand" href="#">Pulse Search Engine</a>
       </div>
-      <div id="navbar" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Link 1</a></li>
-          <li><a href="#">Link 2</a></li>
-          <li><a href="#">Link 3</a></li>
-        </ul>
-      </div><!--/.nav-collapse -->
     </div>
   </nav>
 
   <div class="container">
     <br />
-    <br />
+    <h1>Pulse<small>searching all the things</small></h1>
     <br />
     <div ng-view></div>
   </div><!-- /.container -->
 
+  <footer class="footer">
+    <div class="container">
+      <p class="text-muted">CSH's Search Engine - Index all the Things!!</p>
+    </div>
+  </footer>
 
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="../node_modules/angular-ui-bootstrap/ui-bootstrap.min.js"></script>
   <script src="app.js"></script>
+  <script src="config.js"></script>
   <script src="search/search.js"></script>
 
 
