added tabs for data source

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,6 @@
   </nav>
 
   <div class="container">
-    <br />
     <h1>Pulse<small>searching all the things</small></h1>
     <br />
     <div ng-view></div>
@@ -46,6 +45,7 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="../node_modules/angular-ui-bootstrap/ui-bootstrap.min.js"></script>
+  <script src="../node_modules/angular-ui-bootstrap/ui-bootstrap-tpls.min.js"></script>
   <script src="app.js"></script>
   <script src="config.js"></script>
   <script src="search/search.js"></script>
