--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Pulse Search Engine</a>
+        <a class="navbar-brand" href="#/">Pulse Search Engine</a>
       </div>
     </div>
   </nav>
