added CSH theme

--- a/app/search/search.html
+++ b/app/search/search.html
@@ -45,7 +45,7 @@
 <nav ng-show="numFound != -1" style="text-align:center;">
     <ul class="pagination">
         <li ng-show="start / limit > 5">
-            button type="button" class="btn btn-default" aria-label="Previous" ng-click="lastPage()">
+            <button type="button" class="btn btn-default" aria-label="Previous" ng-click="lastPage()">
                 <span aria-hidden="true">&laquo;</span>
             </button>
         </li>
